# renoir-inference

./: Cargo.toml  Products.csv  README.md  build.rs  config.toml  init.sql  main.rs  predictions.csv  predictions.txt  predictions_mean_renoir_inference.xls  predictions_mean_renoir_inference.xlsx  predictions_renoir_inference.csv  predictions_renoir_inference.xls  table_insert.py  test.csv
.cargo/: config.toml
src/: main.rs
src/model/: mod.rs
