[package]
name = "renoir-inference-postgres"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:futures", "tokio/net", "tokio/io-util", "tokio/time", "tokio/rt-multi-thread", "tokio/macros"]

[build-dependencies]
burn-import = "~0.17"

[dependencies]
burn = {version = "0.17", features = ["ndarray", "std"], default-features = false}
burn-ndarray = "0.17"
renoir = { git = "https://github.com/deib-polimi/renoir", features = ["tokio"], branch = "dev"}
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
regex = "1"
serde_json = { version = "*"}

postgres ={ version = " 0.19.1"}

async-stream = "0.3.6"

flume = "0.11.1"

tokio = { version = "1.43.0", features = ["full"], default-features = false, optional = true }
tokio-stream = "0.1"
futures = { version = "0.3.31", optional = true }

[patch.crates-io]
zip = { git = "https://github.com/zip-rs/zip2.git", tag = "v2.6.1" }
